--- a/config-client-app.properties
+++ b/config-client-app.properties
@@ -1,3 +1,3 @@
 # Put application-specific config here (application name: client-config-app)
-some.property=coffee
-some.other.property=is good
+some.property=coffee and beer
+some.other.property=are good, good, good
